# jxp

./: Anchor.toml  README.md
programs/collecting-processor/: Cargo.toml
programs/collecting-processor/src/: lib.rs
programs/connecting-processor/: Cargo.toml
programs/connecting-processor/src/: lib.rs
programs/publishing-processor/: Cargo.toml
programs/publishing-processor/src/: lib.rs
programs/referencing-processor/: Cargo.toml
programs/referencing-processor/src/: lib.rs
programs/registering-processor/: Cargo.toml
programs/registering-processor/src/: lib.rs
tests/: jxp.ts
